--- a/apps/signet-ui/src/components/requests/RequestCard.module.css
+++ b/apps/signet-ui/src/components/requests/RequestCard.module.css
@@ -121,6 +121,10 @@
   color: var(--success);
 }
 
+.autoApproved {
+  color: var(--accent);
+}
+
 /* Details section */
 .details {
   display: flex;
